# drift

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml  drift.toml  install.sh
.github/workflows/: ci.yml  release.yml
benches/: RESULTS.md  parse_bench.rs  sqlfluff_compare.sh
docs/rules/: README.md  drift.ambiguity.duplicate-alias.md  drift.ambiguity.mixed-bool.md  drift.ambiguity.reserved-as-identifier.md  drift.ambiguity.same-name-fn-col.md  drift.ambiguity.unqualified-column.md  drift.conventions.fk-naming.md  drift.conventions.index-naming.md  drift.conventions.lowercase-columns.md  drift.conventions.no-hungarian.md  drift.conventions.pk-column-id.md  drift.conventions.plural-table-name.md  drift.conventions.snake-case-tables.md  drift.conventions.upper-keywords.md  drift.correctness.between-on-date.md  drift.correctness.cartesian-join.md  drift.correctness.case-without-else.md  drift.correctness.distinct-on-no-order.md  drift.correctness.div-zero-literal.md  drift.correctness.duplicate-column.md  drift.correctness.group-by-no-agg.md  drift.correctness.implicit-coercion.md  drift.correctness.missing-where-delete.md  drift.correctness.missing-where-update.md  (+48 more)
editors/vscode/: README.md  (+3 more)
src/: baseline.rs  cli.rs  config.rs  dialect.rs  disables.rs  fixer.rs  formatter.rs  lib.rs  lsp.rs  main.rs  parse.rs  report.rs
tests/: baseline_integration.rs  cli_outputs.rs  config_parse.rs  dialect_detect.rs  disables_integration.rs  fix_roundtrip.rs  integration.rs  rule_ambiguity_test.rs  rule_conventions_test.rs  rule_correctness_test.rs  rule_performance_test.rs  rule_portability_test.rs  rule_security_test.rs  rule_style_test.rs
(+88 files in other folders)
