[package]
name = "drift-sql"
version = "0.15.0"
edition = "2021"
rust-version = "1.75"
description = "sql linter and formatter. multi-dialect, single binary, 60-180x faster than sqlfluff."
license = "MIT"
authors = ["farkhad <bennett@frkhd.com>"]
repository = "https://github.com/f4rkh4d/drift"
readme = "README.md"
keywords = ["sql", "linter", "formatter", "lsp", "cli"]
categories = ["command-line-utilities", "development-tools"]

# the package on crates.io is `drift-sql` (the unscoped `drift` was already taken
# by an unrelated openapi tool). the binary you get is still `drift` so workflows
# and shell aliases stay unchanged.

[lib]
name = "drift"
path = "src/lib.rs"

[[bin]]
name = "drift"
path = "src/main.rs"

[dependencies]
sqlparser = "0.52"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
colored = "2"
similar = "2"
rayon = "1"
glob = "0.3"
serde_json = "1"
once_cell = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
tempfile = "3"

[[bench]]
name = "parse_bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
